<resources>
    <string name="app_name">Cofetaria Piticot</string>
    <string name="address">Street Petre Ispirescu, nr.77</string>
    <string name="hours">Hours</string>
    <string name="motivation">Motivation</string>
    <string name="motivation_text">Cofetaria Piticot represents a wish come true of some people passioned about the velvety flavours of traditional cakes. We use only natural ingredients and traditional methods of preparing sweets and pastry products.</string>
    <string name="subject">Subject</string>
    <string name="email_body">Write here the email.</string>
    <string name="greetings_text">We wait you from 10:00 to 21:30 on mondays and from 08:00 to 21:30 for the rest of the week.</string>

    <string name="tel_nr" translatable="false">(+40)21&#8211;420&#8211;66&#8211;70</string>
    <string name="email" translatable="false">cofetaria.piticot@gmail.com</string>


    <string name="website_address" translatable="false">www.piticot.ro</string>
    <string name="full_website_address" translatable="false">http://www.piticot.ro</string>
    <string name="location" translatable="false">https://www.google.com/maps/place/Cofetaria+Piticot/@44.415028,26.0589531,17z/data=!4m8!1m2!3m1!2sCofetaria+Piticot!3m4!1s0x0:0xdb7e2320e87bd772!8m2!3d44.4150279!4d26.0611421</string>
</resources>
